--- a/css/partials/__globals.scss
+++ b/css/partials/__globals.scss
@@ -16,6 +16,16 @@ body {
   background: #fff;
 }
 
+h1 {
+  font-weight: 700;
+  font-size: 24px;
+  margin: 25px 0 5px;
+}
+
+ul {
+  margin: 5px;
+}
+
 .wrapper {                        // Wrapper around all block content
 
 }
