--- a/css/main.scss
+++ b/css/main.scss
@@ -16,5 +16,8 @@
 @import "partials/__devices";               // Splash showing multiple devices
 @import "partials/__skuchooser";               // SKU Choose tool
 @import "partials/__quiz";               // The big quiz section
+@import "partials/__learnmore";               // Learn more
+@import "partials/__rules";               // Rules copy
+@import "partials/__footer";               // Footer
 
 
