--- a/css/partials/__hero.scss
+++ b/css/partials/__hero.scss
@@ -7,6 +7,7 @@
 .hero {
   background: url('../img/hero.png') 0 0 no-repeat #fff;
   background-size: cover;
+  background-position: center top;
   height: 700px;
 
   // Logos in hero
