--- a/css/partials/__footer.scss
+++ b/css/partials/__footer.scss
@@ -7,9 +7,19 @@
 footer {
   background: #f2f2f2;
 
-  
-  img {
-    width: 200px;
-    height: 43px;
+  div {
+    width: 100%;
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 30px 0;
+
+    img {
+      width: 200px;
+      height: 43px;
+    }
+
+    p {
+      float: right;
+    }
   }
 }
