--- a/css/partials/__rules.scss
+++ b/css/partials/__rules.scss
@@ -10,17 +10,30 @@
   margin: 0 auto;
   padding: 60px 0;
 
+
   &__expander {
     font-size: 18px;
     color: #0078d7;
     margin:0 0 25px;
+
+    &:hover {
+      cursor: pointer;
+      text-decoration: underline;
+    }
+
+    &:after {
+      content: " \[+\]";
+    }
   }
 
   &__content {
+    display: none;
     font-size: 16px;
     color: #555;
     background: #f2f2f2;
     padding: 50px;
+
+
 
     p {
       margin-bottom: 25px;
